# stair_estimation

./: CMakeLists.txt  README.md  package.xml  plane_segmentation.cpp
include/: plane_segmentation.hpp  plane_tracker.hpp
include/stair_estimation/: plane_segmentation.hpp  plane_tracker.hpp
msg/: StairPlanes.msg
src/: CMakeLists.txt  plane_segmentation.cpp  stair_estimator.cpp
